# Hackathon

./: Titles_v1 - Sheet1.csv  model_wrapper.py  requirements.txt  test.py
data_generator/: README.md  pyproject.toml
data_generator/data_generator/: data_generator.py  league_names.txt  nltk_init.py  pos_tag.py  teamnames.txt
data_generator/data_generator/util/: StringUtil.py  data_constants.py  genericMergeLib.py  lang_utils.py
data_generator/unused/: data_generator_v2.py
flaskapp/: pyproject.toml
flaskapp/flaskapp/: app.py  model.py  modelTraining.py  model_wrapper.py  sample.json  spoilerDetection.py  trained_model_tokenizer.h5
video-search-ui/: index.html
video-search-ui/css/: new.css
video-search-ui/js/: script.js
