[tool.poetry]
name = "data-generator"
version = "0.1.0"
description = ""
authors = ["dmukka <dheeraj.mukka@tivo.com>"]
readme = "README.md"
packages = [{include = "data_generator"}]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^15.1.1"
nltk = "^3.7"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
