[tool.poetry]
name = "flaskapp"
version = "0.1.0"
description = ""
authors = ["dmukka <dheeraj.mukka@tivo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
